bug, text description too long, runs out of the card, fixed.

--- a/src/css/CardComponent.css
+++ b/src/css/CardComponent.css
@@ -28,6 +28,8 @@
     /* margin-left: 5%; */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 10;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 
 .delete-button {
